--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -97,6 +97,19 @@
 		app:layout_constraintTop_toBottomOf="@+id/textAccessCoarseLocation" />
 
 	<com.google.android.material.textview.MaterialTextView
+		android:id="@+id/textAccessBackgroundLocation"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginStart="16dp"
+		android:layout_marginTop="4dp"
+		android:layout_marginEnd="16dp"
+		android:text="@string/access_background_location"
+		android:textSize="16sp"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/textAccessFineLocation" />
+
+	<com.google.android.material.textview.MaterialTextView
 		android:id="@+id/textOverallStatus"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
@@ -107,7 +120,7 @@
 		android:textSize="24sp"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/textAccessFineLocation" />
+		app:layout_constraintTop_toBottomOf="@+id/textAccessBackgroundLocation" />
 
 	<com.google.android.material.button.MaterialButton
 		android:id="@+id/btnDebug"
