--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,117 +7,120 @@
 	tools:context=".MainActivity">
 
 	<com.google.android.material.button.MaterialButton
-		android:id="@+id/btnSvcGetStatus"
+		android:id="@+id/btnRefreshStatus"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="16dp"
 		android:layout_marginTop="16dp"
 		android:layout_marginEnd="16dp"
-		android:text="@string/button_bg_service_get_status"
+		android:text="@string/refresh_status"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent" />
 
-	<com.google.android.material.button.MaterialButton
-		android:id="@+id/btnSvcTurnOn"
-		android:layout_width="0dp"
-		android:layout_height="wrap_content"
-		android:layout_marginStart="16dp"
-		android:layout_marginTop="16dp"
-		android:layout_marginEnd="16dp"
-		android:text="@string/button_bg_service_turn_on"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/btnSvcGetStatus" />
-
-	<com.google.android.material.button.MaterialButton
-		android:id="@+id/btnSvcTurnOff"
+	<com.google.android.material.textview.MaterialTextView
+		android:id="@+id/textAbleTo"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="16dp"
 		android:layout_marginTop="16dp"
 		android:layout_marginEnd="16dp"
-		android:text="@string/button_bg_service_turn_off"
+		android:text="@string/able_to"
+		android:textSize="24sp"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/btnSvcTurnOn" />
+		app:layout_constraintTop_toBottomOf="@+id/btnRefreshStatus" />
 
-	<androidx.appcompat.widget.AppCompatButton
-		android:id="@+id/btnSvcInfo1"
+	<com.google.android.material.textview.MaterialTextView
+		android:id="@+id/textReceiveSms"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginStart="16dp"
+		android:layout_marginTop="4dp"
+		android:layout_marginEnd="16dp"
+		android:text="@string/receive_sms"
+		android:textSize="16sp"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/textAbleTo" />
+
+	<com.google.android.material.textview.MaterialTextView
+		android:id="@+id/textReadSms"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginStart="16dp"
+		android:layout_marginTop="4dp"
+		android:layout_marginEnd="16dp"
+		android:text="@string/read_sms"
+		android:textSize="16sp"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/textReceiveSms" />
+
+	<com.google.android.material.textview.MaterialTextView
+		android:id="@+id/textSendSms"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginStart="16dp"
+		android:layout_marginTop="4dp"
+		android:layout_marginEnd="16dp"
+		android:text="@string/send_sms"
+		android:textSize="16sp"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/textReadSms" />
+
+	<com.google.android.material.textview.MaterialTextView
+		android:id="@+id/textAccessCoarseLocation"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginStart="16dp"
+		android:layout_marginTop="4dp"
+		android:layout_marginEnd="16dp"
+		android:text="@string/access_coarse_location"
+		android:textSize="16sp"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/textSendSms" />
+
+	<com.google.android.material.textview.MaterialTextView
+		android:id="@+id/textAccessFineLocation"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginStart="16dp"
+		android:layout_marginTop="4dp"
+		android:layout_marginEnd="16dp"
+		android:text="@string/access_fine_location"
+		android:textSize="16sp"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/textAccessCoarseLocation" />
+
+	<com.google.android.material.textview.MaterialTextView
+		android:id="@+id/textAccessBackgroundLocation"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		android:layout_marginStart="16dp"
+		android:layout_marginTop="4dp"
+		android:layout_marginEnd="16dp"
+		android:text="@string/access_background_location"
+		android:textSize="16sp"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/textAccessFineLocation" />
+
+	<com.google.android.material.textview.MaterialTextView
+		android:id="@+id/textOverallStatus"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_marginStart="16dp"
 		android:layout_marginTop="16dp"
 		android:layout_marginEnd="16dp"
-		android:text="@string/button_bg_service_turn_off"
+		android:text="@string/overall_status_unknown"
+		android:textSize="24sp"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/btnSvcTurnOff"
-		/>
-
-	<androidx.appcompat.widget.LinearLayoutCompat
-		android:id="@+id/layoutLinearCompact1"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_marginStart="16dp"
-		android:layout_marginTop="16dp"
-		android:layout_marginEnd="16dp"
-		app:layout_constraintTop_toBottomOf="@+id/btnSvcInfo1"
-		>
-
-		<ImageView
-			android:id="@+id/iconLocationQuestionMark"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:padding="16dp"
-			android:scaleX="2"
-			android:scaleY="2"
-			android:importantForAccessibility="no"
-			app:srcCompat="@drawable/outline_not_listed_location_24" />
-
-		<com.google.android.material.textfield.TextInputLayout
-			android:id="@+id/textField"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:hint="@string/testTextView"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintStart_toStartOf="@+id/iconLocationQuestionMark">
-
-			<com.google.android.material.textfield.TextInputEditText
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginStart="8dp"
-				/>
-
-		</com.google.android.material.textfield.TextInputLayout>
-
-	</androidx.appcompat.widget.LinearLayoutCompat>
-
-	<FrameLayout
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:layout_marginStart="16dp"
-		android:layout_marginTop="16dp"
-		android:layout_marginEnd="16dp"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/layoutLinearCompact1"
-		>
-
-		<androidx.recyclerview.widget.RecyclerView
-			android:id="@+id/recyclerView1"
-			android:layout_width="match_parent"
-			android:layout_height="220dp"
-			android:scrollbars="vertical"
-			app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintTop_toBottomOf="@+id/layoutLinearCompact1"
-			app:layout_constraintBottom_toTopOf="@+id/btnDebug"
-			/>
-
-	</FrameLayout>
-
+		app:layout_constraintTop_toBottomOf="@+id/textAccessBackgroundLocation" />
 
 	<com.google.android.material.button.MaterialButton
 		android:id="@+id/btnDebug"
